--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,34 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+      <ion-toolbar>
+          <ion-title>
+              Contactos
+          </ion-title>
+          <ion-buttons end (click)="clickAgregar()">
+            <button ion-button icon-only>
+              <ion-icon name="add"></ion-icon>
+            </button>
+          </ion-buttons>
+        </ion-toolbar>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content padding style="background-color: #05668D">
+    <ion-list *ngFor= "let c of contactos" (click)="clickContacto(c)" >
+        <ion-item-sliding >
+          <ion-item style="background-color: #EEF5DB">
+            <ion-avatar item-start>
+              <img [src]="c.imagen">
+            </ion-avatar>
+            <h2>{{c.nombre}}</h2>
+            <p>{{c.telefono}}</p>
+          </ion-item>
+          <ion-item-options side="right">
+            <button ion-button color = "danger">
+              <ion-icon name="close"></ion-icon>
+              Eliminar
+            </button>
+          </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
 </ion-content>
